--- a/version.htm
+++ b/version.htm
@@ -1,38 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script>
-            let url = window.location.href;
-            let q = url.split('?');
-            if(q.length == 2){
-                let p = q[1].split('&');
-
-                if(p.length > 0){
-                    let f = -1;
-                    for(let i = 0; i < p.length; i++){
-                        let a = p[i].split('=').length;
-                        if(a != 2) {
-                            error();
-                            break;
-                        }
-                        else f = 1;
-                    }
-                    
-                    if(f == 1){
-                        let app_version = p[0];
-                        let key = p[1];
-
-                        alert(app_version);
-                        alert(key);
-                    }
-                }
-                else error();
-            }
-            else error();
-
-            function error(){
-                alert("Error");
-            }
-        </script>
+        <script src="scripts.js"></script>
     </head>
+
+    <body onload="_q();">
+        
+    </body>
 </html>
