--- a/version.htm
+++ b/version.htm
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <script src="scripts.js"></script>
-    </head>
-
-    <body onload="_q();">
-        
-    </body>
-</html>
+<!DOCTYPE html><html><head><script src="scripts.js"></script></head><body onload="_q();"></body></html>
