--- a/version.htm
+++ b/version.htm
@@ -1,1 +1,27 @@
-<!DOCTYPE html><html><head><script src="scripts.js"></script></head><body onload="_q();"></body></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <script src="scripts.js"></script>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles.css"/>
+    </head>
+    
+    <!-- onload="_q();"-->
+    <body onload="_q();">
+
+        <!--Toolbar-->
+        <div id="toolbar">
+            <div id="toolbar_item">
+                <img src="images/app_icon_translucent.png" width="30" width="30"/>
+            </div>
+            <div id="toolbar_item" class="toolbar_title">VK Remix Music</div>
+        </div>
+
+        <!--Content-->
+        <div id="root">
+            
+        </div>
+
+    </body>
+</html>
