--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -18,9 +18,9 @@
 
       <div id="root">
         <strong>Privacy Policy</strong> <p>
-          JTA Team built the VRM app as
+          GigX Studio built the VRM app as
           a Free app. This SERVICE is provided by
-          JTA Team at no cost and is intended for use as
+          GigX Studio at no cost and is intended for use as
           is.
         </p> <p>
           This page is used to inform visitors regarding my
@@ -39,7 +39,7 @@
         </p> <p><strong>Information Collection and Use</strong></p> <p>
           For a better experience, while using our Service, I
           may require you to provide us with certain personally
-          identifiable information, including but not limited to JTA Team, App Developer. The information that
+          identifiable information, including but not limited to GigX Studio, App Developer. The information that
           I request will be retained on your device and is not collected by me in any way.
         </p> <div><p>
             The app does use third party services that may collect
